# safesite

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
scripts/: object_detection.py
src/: object_detection.cpp
